# harmony-android-guide

./: .gitignore  02-ANDROID-AS-ENGINE-CN.md  02-ANDROID-AS-ENGINE.md  CLAUDE.md  README.md  README_CN.md  a2oh-worker.sh  aosp-shim.dex  claude-yang.md  showcase-full.dex
aosp-audio-daemon-port/: Makefile  README.md  build.sh  m5step2-smoke.sh
aosp-audio-daemon-port/native/: AudioHelper.cpp  AudioHelper.h  WestlakeAudioFlinger.cpp  WestlakeAudioFlinger.h  WestlakeAudioTrack.cpp  WestlakeAudioTrack.h  audio_helper.cc  audio_smoke.cc  audiopolicy_main.cpp
aosp-audio-daemon-port/spike/: build.sh  spike  spike.c
aosp-libbinder-port/: BUILD_PLAN.md  M3_NOTES.md  M4_PRE_NOTES.md  Makefile  README.md  build.sh  build_activity_service_test.sh  build_asinterface.sh  build_discover.sh  build_hello.sh  build_m4de_tests.sh  build_mcd_discover_wrapper.sh  build_mcd_launcher.sh  build_mcd_production_launcher.sh  build_noice_launcher.sh  build_noice_production_launcher.sh  build_package_service_test.sh  build_power_service_test.sh  build_system_service_route_test.sh  build_window_service_test.sh  lib-boot.sh  m3-dalvikvm-boot.sh  sandbox-boot.sh
aosp-libbinder-port/diagnostics/: CR12_binder_topology_report.md  CR13_phaseB_sigbus_report.md  CR18_primer_sigbus_bisection.md  CR24_phaseB_hang_diagnostic.md  CR26_pfcut_sentinel_writer.md
aosp-libbinder-port/native/: JavaBBinderHolder.cpp  JavaBBinderHolder.h  libandroid_runtime_stub.cc
aosp-libbinder-port/patches/: 0001-imemory-drop-stdatomic.patch  0002-libbase-strings-cxx17.patch  0003-parcel-kheader-syst.patch  0004-parcel-accept-any-kheader-on-recv.patch  bionic-include-prefix.h
aosp-libbinder-port/test/: ActivityServiceTest.java  AsInterfaceTest.java  CharsetPrimer.java  DiscoverWrapperBase.java  DisplayServiceTest.java  HelloBinder.java  InputMethodServiceTest.java  McdDiscoverWrapper.java  McdLauncher.java  McdProductionLauncher.java  NoiceDiscoverWrapper.java  NoiceLauncher.java  NoiceProductionLauncher.java  NotificationServiceTest.java  PackageServiceTest.java  PowerServiceTest.java  SystemServiceRouteTest.java  WindowServiceTest.java  bcp-sigbus-repro.sh  binder_smoke.cc  mcd-discover.sh  mcd.discover.properties  noice-discover.sh  noice.discover.properties  sm_registrar.cc  sm_smoke.cc
aosp-surface-daemon-port/: BUILD_PLAN.md  Makefile  README.md  build.sh  m6step1-smoke.sh  m6step2-smoke.sh  m6step3-smoke.sh  m6step4-smoke.sh  m6step5-smoke.sh
aosp-surface-daemon-port/native/: DlstConsumer.cpp  DlstConsumer.h  MemfdGraphicBuffer.cpp  MemfdGraphicBuffer.h  WestlakeDisplayEventConnection.cpp  WestlakeDisplayEventConnection.h  WestlakeGraphicBufferProducer.cpp  WestlakeGraphicBufferProducer.h  WestlakeSurfaceComposer.cpp  WestlakeSurfaceComposer.h  WestlakeSurfaceComposerClient.cpp  WestlakeSurfaceComposerClient.h  surface_smoke.cc  surfaceflinger_main.cpp
aosp-surface-daemon-port/spike/: build.sh  spike  spike.cpp  spike_hwui_flags  spike_hwui_flags.cpp
archive/v2-ohos-substrate/: README.md
art-boot-image/: BOOTSTRAP-STATUS.md  asm_defines.h.generated  core-patched.dex
art-boot-image/patches/: CharSequence.java  Object.java  String.java
art-build/stubs/: link_stubs_no_asm.cc
artifacts/noice-1day/: latest_candidate.txt
artifacts/ohos-mvp/: .gitignore  README.md
artifacts/real-mcd/: latest_patchsystem_a15_arm64.txt
benchmark/: RESULTS.txt  VMBenchmark.java  analyze-results.py  benchmark-dalvik.dex  raw-results.txt  run-all-benchmarks.sh  run-benchmarks.sh
dalvik-port/: CMakeLists.txt  Makefile  README.md  hello-android.dex  launcher.cpp
dalvik-port/compat/: JNIHelp.h  RegSlot.h  arkui_bridge.cpp  drm_inproc_bridge.c  drm_present.c  drm_probe.c  drm_red.c  ffi.h  libcore_bridge.cpp  link_fixups.cpp  safe_iop.h  skia_canvas_direct.cpp  test_dvm_entry_inproc.c
dalvik-port/compat/bionic/libc/upstream-dlmalloc/: malloc.h
dalvik-port/compat/cutils/: ashmem.h  atomic.h  fs.h  memory_barrier.h  multiuser.h  open_memstream.h  process_name.h  sockets.h  trace.h
dalvik-port/compat/m6-drm-daemon/: m6-drm-daemon
dalvik-port/compat/system/: thread_defs.h
dalvik-port/javacore-stub/: dex_patcher.py  javacore_stub.c
dalvik-port/locale-patch/: rebuild.sh
dalvik-port/locale-patch/src/libcore/icu/: ICU.java
dalvik-port/locale-patch/test/: LocaleTest.java
dalvik-port/patches/: 64bit-class-fix.patch  all-64bit-changes.patch  dalvik-kitkat-64bit-all.patch  fix-findclass-boot.patch  fix-init-boot.patch  fix-inline-skip.patch  fix-thread-boot.patch
database/: known_mappings_graphics_parcel.sql
docs/: AGENT-A-TASKS.md
docs/engine/: AGENT_SWARM_PLAYBOOK.md  ANDROID-PHONE-TEST-PLAN.md  ANDROID_SHIM_AUDIT.md  ARCHITECTURE.md  ARCHITECTURE_CN.md  BINDER_PIVOT_ARCHITECTURE.md  BINDER_PIVOT_ARCHITECTURE_CN.md  BINDER_PIVOT_DESIGN.md  BINDER_PIVOT_DESIGN_V2.md  BINDER_PIVOT_MILESTONES.md  CR-BB-OHOS-RENDER-STRATEGY.md  CR-CC-V2-OHOS-RENDER-GLUE-ANALYSIS.md  CR-DD-CANDIDATE-C-VS-V2-OHOS-RECONSIDERED.md  (+77 more)
multiproc-test-gradle/: settings.gradle.kts
ohos-deploy/: aosp-shim.dex  boot-aosp-shim.oat  boot-core-libart.art
ohos-tests-gradle/: .gitignore  build.gradle.kts  settings.gradle.kts
scripts/: aosp-stub-gen.py  binder-pivot-regression.sh  build-shim-dex-ohos.sh  build-shim-dex.sh  check-real-mcd-proof.sh  check-westlake-runtime-symbols.sh  framework_duplicates.txt  generate_per_api_skills.py  patch-core-oj-westlake.py  run-apk-ohos.sh  run-apk.sh  run-controlled-showcase.sh  run-cutoff-canary.sh  run-material-xml-probe.sh  run-material-yelp.sh  run-mcd-profile.sh  run-mcd-westlake.sh  run-noice-westlake.sh  run-ohos-test.sh  run-yelp-live.sh  sync-westlake-phone-runtime.sh  westlake-restore.sh
skills/: DALVIK-BUILD-GUIDE-CN.md  DALVIK-BUILD-GUIDE.md  DALVIK-PORT.md
tools/: westlake_boundary_audit.py
westlake-deploy-ohos/v3-hbc/adapter-src/framework/jni/: BUILD.gn
westlake-deploy-ohos/v3-hbc/adapter-src/framework/surface/jni/skia_rtti_shim/: BUILD.gn  README.md  skia_class_list.inc  skia_rtti_shim.cpp  skia_rtti_shim.ver
westlake-host/: AndroidManifest.xml  TOUCH_PROTOCOL.md  build-apk.sh  deploy.sh
(+2183 files in other folders)
